--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,29 +1,34 @@
-.center {
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    width: 50%;
-  }
-
-.logocenter {
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-  width: 100%; 
+html {
+  margin: 0;
 }
 
-h1 {
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    
+h1, h2, h3, h4 {
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
-.customcard {
-  background-color: black;
-  outline-color: black;
-  --card-width: 50%;
-  --card-height: 20%;
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-  border-radius: 2.5em;
+p {
+  font-family: Arial, Helvetica, sans-serif;
 }
+
+body {
+  background-color: rgb(242, 242, 242); 
+  margin: 0;
+  padding: 0;
+}
+
+#header_logo {
+  width: 200px;
+  align-self: center;
+}
+
+#page_frame {
+  width: 100%;
+  height: 85vh;
+  border-color: transparent;
+  border-radius: 0.75em;
+}
+
+#side_frame {
+  width: 30%;
+}
+
